--- a/Panel.bib
+++ b/Panel.bib
@@ -1388,3 +1388,74 @@ quality preschool program based on High Scope's participatory learning approach 
 }
 
 
+@article{ConteKeivabu.2022,
+  title = {London {{Congestion Charge}}: {{The Impact}} on {{Air Pollution}} and {{School Attendance}} by {{Socioeconomic Status}}},
+  author = {Conte Keivabu, Risto and R{\"u}ttenauer, Tobias},
+  year = {2022},
+  journal = {Population and Environment},
+  volume = {43},
+  number = {4},
+  pages = {576--596},
+  issn = {1573-7810},
+  doi = {10.1007/s11111-022-00401-4}
+}
+
+
+
+
+@article{Xu.2017,
+  title = {Generalized Synthetic Control Method: {{Causal}} Inference with Interactive Fixed Effects Models},
+  author = {Xu, Yiqing},
+  year = {2017},
+  journal = {Political Analysis},
+  volume = {25},
+  number = {1},
+  pages = {57--76},
+  issn = {1047-1987},
+  doi = {10.1017/pan.2016.2}
+}
+
+
+
+@article{Athey.2021,
+  title = {Matrix Completion Methods for Causal Panel Data Models},
+  author = {Athey, Susan and Bayati, Mohsen and Doudchenko, Nikolay and Imbens, Guido and Khosravi, Khashayar},
+  year = {2021},
+  journal = {Journal of the American Statistical Association},
+  volume = {59},
+  pages = {1--15},
+  issn = {0162-1459},
+  doi = {10.1080/01621459.2021.1891924}
+}
+
+
+
+@article{Solon.2015,
+  title = {What {{Are We Weighting For}}?},
+  author = {Solon, Gary and Haider, Steven J. and Wooldridge, Jeffrey M.},
+  year = {2015},
+  journal = {Journal of Human Resources},
+  volume = {50},
+  number = {2},
+  pages = {301--316},
+  issn = {0022-166X},
+  doi = {10.3368/jhr.50.2.301}
+}
+
+@misc{Abadie.2022,
+  title = {When {{Should You Adjust Standard Errors}} for {{Clustering}}?},
+  author = {Abadie, Alberto and Athey, Susan and Imbens, Guido and Wooldridge, Jeffrey},
+  year = {2022},
+  month = sep,
+  number = {arXiv:1710.02926},
+  eprint = {1710.02926},
+  eprinttype = {arxiv},
+  primaryclass = {econ, math, stat},
+  publisher = {{arXiv}},
+  abstract = {In empirical work it is common to estimate parameters of models and report associated standard errors that account for "clustering" of units, where clusters are defined by factors such as geography. Clustering adjustments are typically motivated by the concern that unobserved components of outcomes for units within clusters are correlated. However, this motivation does not provide guidance about questions such as: (i) Why should we adjust standard errors for clustering in some situations but not others? How can we justify the common practice of clustering in observational studies but not randomized experiments, or clustering by state but not by gender? (ii) Why is conventional clustering a potentially conservative "all-or-nothing" adjustment, and are there alternative methods that respond to data and are less conservative? (iii) In what settings does the choice of whether and how to cluster make a difference? We address these questions using a framework of sampling and design inference. We argue that clustering can be needed to address sampling issues if sampling follows a two stage process where in the first stage, a subset of clusters are sampled from a population of clusters, and in the second stage, units are sampled from the sampled clusters. Then, clustered standard errors account for the existence of clusters in the population that we do not see in the sample. Clustering can be needed to account for design issues if treatment assignment is correlated with membership in a cluster. We propose new variance estimators to deal with intermediate settings where conventional cluster standard errors are unnecessarily conservative and robust standard errors are too small.},
+  archiveprefix = {arXiv},
+  keywords = {Economics - Econometrics,Mathematics - Statistics Theory},
+  file = {N\:\\Zotero\\Abadie et al_2022_When Should You Adjust Standard Errors for Clustering.pdf;C\:\\Users\\qtnztru\\Zotero\\storage\\ES847FLJ\\1710.html}
+}
+
+
